--- a/simple.cabal
+++ b/simple.cabal
@@ -75,6 +75,7 @@ test-suite simple-test
   build-depends:
       base >=4.7 && <5
     , simple
+    , HUnit
   other-modules:
       Paths_simple
   default-language: Haskell2010
