--- a/simple.cabal
+++ b/simple.cabal
@@ -52,7 +52,8 @@ library
       Gadts,
       Kinds,
       SingletonLib,
-      PurelyFunctQueue
+      PurelyFunctQueue,
+      PurelyFunctMergeSort
   other-modules:
       Paths_simple
   default-language: Haskell2010
