--- a/simple.cabal
+++ b/simple.cabal
@@ -57,6 +57,7 @@ library
   other-modules:
       Paths_simple
   default-language: Haskell2010
+  ghc-options: -Wall
 
 executable simple-exe
   main-is: Main.hs
