--- a/simple.cabal
+++ b/simple.cabal
@@ -53,7 +53,8 @@ library
       Kinds,
       SingletonLib,
       PurelyFunctQueue,
-      PurelyFunctMergeSort
+      PurelyFunctMergeSort,
+      PurelyFuncRTQueue
   other-modules:
       Paths_simple
   default-language: Haskell2010
