--- a/simple.cabal
+++ b/simple.cabal
@@ -57,7 +57,8 @@ library
       PurelyFuncRTQueue,
       PurelyFuncDeque,
       PurelyFuncRTDeque,
-      NumberSystems
+      NumberSystems,
+      PurelyRandomAccessList
   other-modules:
       Paths_simple
   default-language: Haskell2010
