Implement binomial heap.

--- a/simple.cabal
+++ b/simple.cabal
@@ -57,6 +57,7 @@ library
       PurelyFuncRTQueue,
       PurelyFuncDeque,
       PurelyFuncRTDeque,
+      PurelyFuncBinomHeap,
       NumberSystems,
       PurelyRandomAccessList
   other-modules:
